hm3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-check-deployment
spec:
  selector:
    matchLabels:
      app: health-check
  replicas: 2
  template:
    metadata:
      labels:
        app: health-check
    spec:
      containers:
        - name: health
          image: franticmax/health-check:latest
          ports:
            - containerPort: 8000
