hm3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-check-service
spec:
  selector:
    app: health-check
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type:
    ClusterIP
